feat: navbar behaviour working

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,7 @@
 :root {
   --basic-color: #eee;
   --darker-color: rgba(0, 0, 0, 0.2);
+  --much-darker-color: rgba(0, 0, 0, 0.8);
   --primary-color: #c74;
 }
 
