--- a/styles/modules/Sections.css
+++ b/styles/modules/Sections.css
@@ -1,3 +1,6 @@
+@import "./Data.css";
+@import "./About.css";
+
 .centered {
   align-items: center;
   align-content: center;
@@ -41,72 +44,10 @@
   flex-direction: row;
 }
 
-/* Especifico de Data */
-#Data {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 2em 0;
-}
-
-#Data .data,
-#Data .label {
-  margin: 0;
-}
-
-/* Especifico de About*/
-
-#About {
-  background-image: url("../../images/sections-background/white-background.jpg");
-  padding: 5vh 0;
-}
-
-#About h1 {
-  text-align: center;
-  margin: 0 2em;
-}
-#About h1,
-#About h2,
-#About h3,
-#About h4 {
-  padding: 1em;
-}
-#About p {
-  text-align: center;
-  max-width: 60vw;
-  margin: 0 auto;
-}
-
-#About .about-List {
-  margin: 20px auto;
-  padding: 2em;
-  background-color: var(--darker-color);
-  border-radius: 2em;
-}
-#About .about-List ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#About img {
-  width: 200px;
-}
-
 @media screen and (max-width: 1200px) {
   .colM {
     width: 60vw;
     max-width: 100%;
-  }
-  #About p {
-    text-align: center !important;
-    margin-bottom: 20px;
-  }
-  #About .row {
-    flex-direction: column-reverse;
-  }
-
-  #About h1 {
-    font-size: 2em;
   }
 }
 @media screen and (max-width: 900px) {
@@ -117,12 +58,6 @@
     margin: 20px;
     width: 100vw;
     max-width: 100%;
-  }
-  #About h1 {
-    font-size: 1.5em;
-  }
-  #About h4 {
-    font-size: 1.1em;
   }
 }
 
