--- a/styles/modules/Data.css
+++ b/styles/modules/Data.css
@@ -1,10 +1,42 @@
-#Data {
-  background-color: var(--primary-color);
-  color: white;
-  padding: 2em 0;
+.dataBackground {
+  background-image: url("../../images/sections-background/statistic.jpg");
+  background-size: cover;
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.67);
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+
+  filter: blur(9px) brightness(0.4) contrast(0.8);
+  transform: scale(1.1);
+}
+.Data {
+  color: black;
+  z-index: 2;
+  position: relative;
+  box-shadow: -1px -1px 23px 8px rgba(0, 0, 0, 0.67) inset;
+  -webkit-box-shadow: -1px -1px 23px 8px rgba(0, 0, 0, 0.67) inset;
+  -moz-box-shadow: -1px -1px 23px 8px rgba(0, 0, 0, 0.67) inset;
 }
 
-#Data .data,
-#Data .label {
+.dataBackground,
+.Data {
+  height: 250px;
+}
+
+.Data .data,
+.Data .label {
   margin: 0;
+}
+
+.Data .data {
+  color: red;
+  text-shadow: 1px 4px 9px rgba(255, 0, 0, 0.4);
+}
+
+@media screen and (max-width: 900px) {
+  .dataBackground,
+  .Data {
+    height: 600px;
+  }
 }
