--- a/styles/main.css
+++ b/styles/main.css
@@ -8,12 +8,14 @@
   --basic-color: #eee;
   --darker-color: rgba(0, 0, 0, 0.2);
   --much-darker-color: rgba(0, 0, 0, 0.8);
-  --primary-color: #c74;
+  --primary-color: #ffbd33;
 }
 
 html,
 body {
   scroll-behavior: smooth;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+  text-rendering: optimizeLegibility !important;
 }
 
 body {
@@ -73,4 +75,13 @@ h4 {
 }
 .text-left {
   text-align: left !important;
+}
+
+.setoff-text {
+  color: white;
+  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
+    0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
+    0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
+    0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+    0 20px 20px rgba(0, 0, 0, 0.15);
 }
