--- a/styles/modules/About.css
+++ b/styles/modules/About.css
@@ -23,6 +23,12 @@
   margin: 0 auto;
 }
 
+.About p span {
+  color: rgb(255, 190, 190);
+  font-weight: bold;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+}
+
 .About .about-List {
   margin: 20px auto;
   padding: 2em;
