feat: some little  changes, footer done (but not responsive yet)

--- a/styles/modules/Sections.css
+++ b/styles/modules/Sections.css
@@ -3,6 +3,7 @@
 @import "./Speakers.css";
 @import "./Sponsors.css";
 @import "./Tickets.css";
+@import "./Footer.css";
 
 .centered {
   align-items: center;
