chore: organizing styles for program schedule

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-@import "./modules/Navbar.css";
-@import "./modules/Hero.css";
-@import "./modules/Sections.css";
-@import "./typingEffect.css";
-
 :root {
   --basic-color: #eee;
   --darker-color: rgba(0, 0, 0, 0.2);
@@ -1229,3 +1224,35 @@ a.ticketBtn:hover {
     font-size: 15px;
   }
 }
+
+/** Schedule */
+.Schedule .program {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.program .StandbyTime {
+
+}
+.program .UniqueTalk {
+
+}
+.program .MultipleTracks {
+
+}
+.program .MultipleTracks .Track {
+
+}
+.Track .Talk {
+
+}
+
+.program .Card {
+
+}
+.program .Card .Time {
+  
+}
+
+.program .Card .Label { }
